Fix to brand-triangle p wrapping.

--- a/#dev/scss/blocks/HB01.scss
+++ b/#dev/scss/blocks/HB01.scss
@@ -153,7 +153,7 @@
 					width: 444px;
 					height: 100%;
 					display: flex;
-					justify-content: flex-start;
+					justify-content: center;
 					flex-direction: column;	
 					position: relative;
 
